# LilyGo-Display-IDF

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults.t-amoled-lite  sdkconfig.defaults.t-amoled-s3  sdkconfig.defaults.t-display  sdkconfig.defaults.t-display-long  sdkconfig.defaults.t-display-s3  sdkconfig.defaults.t-display-s3pro  sdkconfig.defaults.t-dongle-s2  sdkconfig.defaults.t-dongle-s3  sdkconfig.defaults.t-hmi  sdkconfig.defaults.t-qt-c6  sdkconfig.defaults.t-qt-s3-fn4r2  sdkconfig.defaults.t-qt-s3-fn8  sdkconfig.defaults.t-rgb  sdkconfig.defaults.t-watch-2019  sdkconfig.defaults.t-watch-s3  sdkconfig.defaults.t4-s3  setup.py
main/: CMakeLists.txt  Kconfig.projbuild  amoled_driver.c  amoled_driver.h  display_esp32.c  display_hmi.c  display_long.c  display_rgb.cpp  display_s3.c  display_s3_pro.c  display_s3_qt.c  display_watch_s3.c  i2c_driver.c  i2c_driver.h  initSequence.c  initSequence.h  main.cpp  power_driver.cpp  power_driver.h  product_pins.h  tft_driver.h  touch_driver.cpp  touch_driver.h
